--- a/style.scss
+++ b/style.scss
@@ -12,4 +12,16 @@ h1 {
 
 p {
     color: $color-p;
+    font-size: 30px;
+}
+
+//Anidacion
+.caja {
+    h2 {
+        color: yellow;
+    }
+    p{
+        text-decoration: underline;
+        font-size: 20px;
+    }
 }
