--- a/style.css
+++ b/style.css
@@ -19,4 +19,11 @@ p {
   font-size: 40px;
 }
 
+.caja {
+  background: red;
+  border: 4px solid white;
+  box-shadow: 0px 0px 2px black;
+  color: red;
+}
+
 /*# sourceMappingURL=style.css.map */
