--- a/style.scss
+++ b/style.scss
@@ -16,3 +16,16 @@ p {
     font-size: 40px;
 }
 
+//MIXINS
+
+@mixin caja_personalizada {
+    background: $color-h1;
+    border: 4px solid white;
+    box-shadow: 0px 0px 2px black;
+    color: $color-h1;
+    
+}
+
+.caja {
+    @include caja_personalizada();
+}
