--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@
 $color-pricipal: #000;
 $color-h1: red;
 $color-p: white;
+$color-fondo: rgb(26, 26, 26);
 body {
     background: $color-pricipal;
 }
@@ -19,13 +20,18 @@ p {
 //MIXINS
 
 @mixin caja_personalizada {
-    background: $color-h1;
+    background-color: $color-fondo;
     border: 4px solid white;
     box-shadow: 0px 0px 2px black;
     color: $color-h1;
+    margin: 20px;
     
 }
 
-.caja {
+.caja1 {
     @include caja_personalizada();
+}
+
+.caja2 {
+    @include caja_personalizada($color-fondo: white);
 }
