--- a/style.css
+++ b/style.css
@@ -1,21 +1,52 @@
-/* Error: No argument named $color-fondo.
- *     ,
- * 22  | @mixin caja_personalizada {
- *     |        ================== declaration
- * ... |
- * 36  |     @include caja_personalizada($color-fondo: white);
- *     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invocation
- *     '
- *   style.scss 36:5  caja-personalizada()
- *   style.scss 36:5  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: No argument named $color-fondo.\a     \2577 \a 22  \2502  @mixin caja_personalizada {\d\a     \2502         \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501  declaration\a... \2502 \a 36  \2502      @include caja_personalizada($color-fondo: white);\d\a     \2502      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invocation\a     \2575 \a   style.scss 36:5  caja-personalizada()\a   style.scss 36:5  root stylesheet";
+.caja1 h2 {
+  color: yellow;
 }
+.caja1 p {
+  font-size: 20px;
+}
+
+.caja2 {
+  text-align: center;
+}
+.caja2 h2 {
+  color: white;
+}
+.caja2 p {
+  font-size: 30px;
+}
+
+body {
+  background: #181818;
+}
+
+h1 {
+  color: red;
+}
+
+p {
+  font-size: 40px;
+}
+
+.caja1 {
+  background: #474747;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 0px 0px 2px black;
+  color: #000;
+  margin: 20px;
+}
+
+.caja2 {
+  background: #a1a1a1;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 0px 0px 2px black;
+  color: #000;
+  margin: 20px;
+}
+
+.caja1, .caja2 {
+  width: 500px;
+}
+
+/*# sourceMappingURL=style.css.map */
