--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,13 @@
-@use 'anidacion';
+@use 'cajauno';
+@use 'cajados';
+
 // VARIABLES
-$color-pricipal: #000;
+$color-fondo: rgb(24, 24, 24);
+$color-black: #000;
 $color-h1: red;
 $color-p: white;
-$color-fondo: rgb(26, 26, 26);
 body {
-    background: $color-pricipal;
+    background: $color-fondo;
 }
 
 h1 {
@@ -13,17 +15,17 @@ h1 {
 }
 
 p {
-    color: $color-p;
     font-size: 40px;
 }
 
 //MIXINS
 
-@mixin caja_personalizada {
-    background-color: $color-fondo;
-    border: 4px solid white;
+@mixin caja_personalizada ($color-fondo: rgb(71, 71, 71), $color: #000) {
+    background: $color-fondo;
+    border-radius: 15px;
+    padding: 20px;
     box-shadow: 0px 0px 2px black;
-    color: $color-h1;
+    color: $color-black;
     margin: 20px;
     
 }
@@ -33,5 +35,11 @@ p {
 }
 
 .caja2 {
-    @include caja_personalizada($color-fondo: white);
+    @include caja_personalizada($color-fondo: rgb(161, 161, 161), $color: rgb(66, 66, 66));
+}
+
+//OPERADORES
+
+.caja1, .caja2 {
+    width: 400px + 100px;
 }
