--- a/_cajados.scss
+++ b/_cajados.scss
@@ -2,7 +2,7 @@
 .caja2 {
     text-align: center;
     h2 {
-        color: rgb(255, 255, 255);
+        color: $color-p;
     }
     p{        
         font-size: 30px;
