--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,7 @@
 $color-fondo: rgb(24, 24, 24);
 $color-black: #000;
 $color-h1: red;
-$color-p: white;
+$color-p: rgb(31, 182, 11);
 body {
     background: $color-fondo;
 }
