--- a/style.css
+++ b/style.css
@@ -1,57 +1,18 @@
-.caja1 h2 {
-  color: yellow;
-}
-.caja1 p {
-  font-size: 20px;
-}
+/* Error: Undefined variable.
+ *   ,
+ * 5 |         color: $color-p;
+ *   |                ^^^^^^^^
+ *   '
+ *   _cajados.scss 5:16  @use
+ *   style.scss 2:1      root stylesheet */
 
-.caja2 {
-  text-align: center;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a   \2577 \a 5 \2502          color: $color-p;\d\a   \2502                 ^^^^^^^^\a   \2575 \a   _cajados.scss 5:16  @use\a   style.scss 2:1      root stylesheet";
 }
-.caja2 h2 {
-  color: white;
-}
-.caja2 p {
-  font-size: 30px;
-}
-
-body {
-  background: #181818;
-}
-
-h1 {
-  color: red;
-}
-
-p {
-  font-size: 40px;
-}
-
-.caja1 {
-  background: #474747;
-  border-radius: 15px;
-  padding: 20px;
-  box-shadow: 0px 0px 2px black;
-  color: #000;
-  margin: 20px;
-}
-
-.caja2 {
-  background: #a1a1a1;
-  border-radius: 15px;
-  padding: 20px;
-  box-shadow: 0px 0px 2px black;
-  color: #000;
-  margin: 20px;
-}
-
-.caja1, .caja2 {
-  width: 500px;
-}
-
-.nombre {
-  font-size: 80px;
-  color: #2a35c5;
-}
-
-/*# sourceMappingURL=style.css.map */
